load total sizes

--- a/test.ipynb
+++ b/test.ipynb
@@ -8448,6 +8448,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "listsize_data = requests.get('https://openprescribing.net/api/1.0/org_details/?org_type=practice&org=14L&keys=total_list_size&format=json')\n",
+    "if raw_data.status_code != 200:\n",
+    "    # This means something went wrong.\n",
+    "    raise ApiError('GET /tasks/ {}'.format(resp.status_code))\n",
+    "    \n",
+    "listsize_data = raw_data.json()\n",
+    "listsize_data = pd.DataFrame(listsize_data)\n",
+    "listsize_data = listsize_data.sort_values([columns[2],columns[6]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actual_cost</th>\n",
+       "      <th>ccg</th>\n",
+       "      <th>date</th>\n",
+       "      <th>items</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>row_id</th>\n",
+       "      <th>row_name</th>\n",
+       "      <th>setting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>388.59</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>116</td>\n",
+       "      <td>4482</td>\n",
+       "      <td>P84665</td>\n",
+       "      <td>AL-SHIFA MEDICAL CENTRE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>46.11</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>25</td>\n",
+       "      <td>945</td>\n",
+       "      <td>P84623</td>\n",
+       "      <td>ALEESHAN MEDICAL CENTRE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>1815.39</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>463</td>\n",
+       "      <td>15731</td>\n",
+       "      <td>P84673</td>\n",
+       "      <td>ANCOATS URBAN VILLAGE MEDICAL PRACTICE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>672.74</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>145</td>\n",
+       "      <td>5508</td>\n",
+       "      <td>P84631</td>\n",
+       "      <td>ARTANE MEDICAL CENTRE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>1732.05</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>357</td>\n",
+       "      <td>16139</td>\n",
+       "      <td>P84053</td>\n",
+       "      <td>ASHCROFT SURGERY</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1856.54</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>306</td>\n",
+       "      <td>18261</td>\n",
+       "      <td>P84038</td>\n",
+       "      <td>ASHVILLE SURGERY</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2493.03</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>500</td>\n",
+       "      <td>24469</td>\n",
+       "      <td>P84034</td>\n",
+       "      <td>BARLOW MEDICAL CENTRE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2158.16</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>413</td>\n",
+       "      <td>21953</td>\n",
+       "      <td>P84033</td>\n",
+       "      <td>BEACON MEDICAL CENTRE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>3777.36</td>\n",
+       "      <td>14L</td>\n",
+       "      <td>2014-10-01</td>\n",
+       "      <td>803</td>\n",
+       "      <td>33807</td>\n",
+       "      <td>P84029</td>\n",
+       "      <td>BENCHILL MEDICAL PRACTICE</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    actual_cost  ccg        date  items  quantity  row_id  \\\n",
+       "75       388.59  14L  2014-10-01    116      4482  P84665   \n",
+       "59        46.11  14L  2014-10-01     25       945  P84623   \n",
+       "78      1815.39  14L  2014-10-01    463     15731  P84673   \n",
+       "63       672.74  14L  2014-10-01    145      5508  P84631   \n",
+       "40      1732.05  14L  2014-10-01    357     16139  P84053   \n",
+       "26      1856.54  14L  2014-10-01    306     18261  P84038   \n",
+       "23      2493.03  14L  2014-10-01    500     24469  P84034   \n",
+       "22      2158.16  14L  2014-10-01    413     21953  P84033   \n",
+       "19      3777.36  14L  2014-10-01    803     33807  P84029   \n",
+       "\n",
+       "                                  row_name  setting  \n",
+       "75                 AL-SHIFA MEDICAL CENTRE        4  \n",
+       "59                 ALEESHAN MEDICAL CENTRE        4  \n",
+       "78  ANCOATS URBAN VILLAGE MEDICAL PRACTICE        4  \n",
+       "63                   ARTANE MEDICAL CENTRE        4  \n",
+       "40                        ASHCROFT SURGERY        4  \n",
+       "26                        ASHVILLE SURGERY        4  \n",
+       "23                   BARLOW MEDICAL CENTRE        4  \n",
+       "22                   BEACON MEDICAL CENTRE        4  \n",
+       "19               BENCHILL MEDICAL PRACTICE        4  "
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listsize_data.iloc[1:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
