Added code annotations

--- a/test.ipynb
+++ b/test.ipynb
@@ -10285,7 +10285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10305,34 +10305,58 @@
     "    \n",
     "    # Group data by centre name and compute average and std of items \n",
     "    items_data = combined_data['itemsP1000P'].groupby(combined_data['row_name']).describe()\n",
-    "    \n",
-    "    #max_items = items_data['mean'].idxmax()\n",
-    "    #min_items = items_data['mean'].idxmin()\n",
-    "    \n",
+    "\n",
+    "    # Identify the centre with the max average number of prescription items across all months. \n",
+    "    # Ensure centre has data for all 60 months.\n",
     "    max_items = items_data[items_data['count']==60]['mean'].idxmax()\n",
+    "    \n",
+    "    # Identify the centre with the lowest average number of prescription items across all months. \n",
+    "    # Ensure centre has data for all 60 months.\n",
     "    min_items = items_data[items_data['count']==60]['mean'].idxmin()\n",
     "    \n",
+    "    # Group data by date and compute average and std items per 1000 people for each date across all centres.\n",
     "    mean_items_data = combined_data['itemsP1000P'].groupby(combined_data['date']).describe()\n",
     "    \n",
+    "    # Extract number of items per 1000 people for each month for centre with highest average number of prescription items.\n",
     "    max_centre = combined_data[combined_data['row_name'].str.contains(max_items)]\n",
+    "    \n",
+    "    # Extract number of items per 1000 people for each month for centre with lowest average number of prescription items.\n",
     "    min_centre = combined_data[combined_data['row_name'].str.contains(min_items)]\n",
     "    \n",
+    "    # Define subplot and figure size.\n",
     "    fig, ax = plt.subplots(figsize=(20,10))\n",
     "    \n",
+    "    # Add max centre plot to subplot: x axis = dates; y = axis prescription items per 1000 people. \n",
+    "    # Set line color to red and label the line using the max_items label (append '(max)' string).\n",
     "    ax.plot(max_centre['date'], max_centre['itemsP1000P'], color='red',label=max_items+' (max)')\n",
+    "    \n",
+    "    # Add average of centres plot to subplot: x axis = dates; y axis = mean prescription items per 1000 people.\n",
+    "    # Set line color to black and label the line 'AVERAGE'.\n",
     "    ax.plot(mean_items_data.index,mean_items_data['mean'], color='black',label='AVERAGE')\n",
+    "    \n",
+    "    # Add min centre plot to subplot: x axis = dates; y axis = prescription items per 1000 people. \n",
+    "    # Set line color to green and label the line using the min_items label (append '(max)' string).\n",
     "    ax.plot(min_centre['date'], min_centre['itemsP1000P'], color='green',label=min_items+' (min)')\n",
-    "\n",
+    "    \n",
+    "    # If a centre is specified...\n",
     "    if centre:\n",
+    "        # Extract number of items per 1000 people for each month for the specified centre.\n",
     "        custom_centre = combined_data[combined_data['row_name'].str.contains(centre)]\n",
+    "        \n",
+    "        # Extract full name of matched centre.\n",
     "        name = custom_centre['row_name'].iloc[0]\n",
+    "        \n",
+    "        # Add custom centre plot to subplot: x axis = dates; y axis = prescription items per 1000 people. \n",
+    "        # Set line color to blue and label the line using the full name of matched centre.        \n",
     "        ax.plot(custom_centre['date'], custom_centre['itemsP1000P'], color='#6bdcff',label=name)\n",
     "    \n",
+    "    # Display standard deviation information for average across centres by filling the area between mean - STD and mean + STD.\n",
+    "    # Use grey fill color and 90% alpha. \n",
     "    ax.fill_between(mean_items_data.index, mean_items_data['mean']-mean_items_data['std'], mean_items_data['mean']+mean_items_data['std'],\n",
     "                    alpha=0.9, edgecolor='#9c9ea1', facecolor='#dcdee0')\n",
     "    \n",
+    "    # Create title by concatanating names derived from make_name function.\n",
     "    title = 'Prescriptions for ' + codes_names[3] + ' in ' + codes_names[1] + ' over time (per 1000 people)'\n",
-    "\n",
     "    ax.set_title(title, fontsize=20)\n",
     "    ax.set_ylabel('Prescriptions per 1,000 by practice', fontsize=20)\n",
     "    ax.set_xlabel('Date', fontsize=20)\n",
@@ -10394,7 +10418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
