Updated markdown formatting

--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Programming Coursework"
+    "## Programming Coursework\n",
+    "---"
    ]
   },
   {
@@ -35,7 +36,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1) Loading python dependencies."
+    "### 1) Loading python dependencies.\n",
+    "---"
    ]
   },
   {
@@ -58,7 +60,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Define the three custom functions devised for this project."
+    "### 2) Define the three custom functions devised for this project.\n",
+    "---"
    ]
   },
   {
@@ -481,7 +484,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3) Examine help associated with each function."
+    "### 3) Examine help associated with each function.\n",
+    "---"
    ]
   },
   {
@@ -688,7 +692,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) Running the function without using an API call."
+    "### 4) Running the function without using an API call.\n",
+    "---"
    ]
   },
   {
@@ -836,7 +841,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7) Adding the values pertaining to a specific centre to a plot. "
+    "### 7) Adding the values pertaining to a specific centre to a plot. \n",
+    "---"
    ]
   },
   {
@@ -894,7 +900,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8) Searching for a centre that does not exist within selected CCG."
+    "### 8) Searching for a centre that does not exist within selected CCG.\n",
+    "---"
    ]
   },
   {
@@ -937,7 +944,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9) Other examples of the function (different CCG, different BNF, etc.)"
+    "### 9) Other examples of the function (different CCG, different BNF, etc.)\n",
+    "---"
    ]
   },
   {
