Updated markdown formatting

--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Programming Coursework\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -13,16 +13,16 @@
    "metadata": {},
    "source": [
     "#### Who are OpenPrescribing? \n",
-    "* OpenPrescribing is a project built by EBM DataLab, funded by NHS England and NIHR Biomedical Research Centre, which aims to make medical and scientific information more accessible. The project collates a variety of medical data from the NHS including prescribing data, practice list sizes, clinical commision group information, practice locations and BNF codes. More information can be found at https://openprescribing.net/\n",
+    ">OpenPrescribing is a project built by EBM DataLab, funded by NHS England and NIHR Biomedical Research Centre, which aims to make medical and scientific information more accessible. The project collates a variety of medical data from the NHS including prescribing data, practice list sizes, clinical commision group information, practice locations and BNF codes. More information can be found at https://openprescribing.net/\n",
     "\n",
     "#### What are BNF codes?\n",
-    "* BNF codes are unique identifiers for each drug which is prescribed in the NHS. The British National Formulary (BNF) maintain these codes and produces a hierarchial numbering system for drugs, grouped based on the drugs specific type. Openprescribing.net uses these codes to identify the number of drugs which have been prescribed by different practices. A list of all BNF sections can be found at https://openprescribing.net/bnf/\n",
+    ">BNF codes are unique identifiers for each drug which is prescribed in the NHS. The British National Formulary (BNF) maintain these codes and produces a hierarchial numbering system for drugs, grouped based on the drugs specific type. Openprescribing.net uses these codes to identify the number of drugs which have been prescribed by different practices. A list of all BNF sections can be found at https://openprescribing.net/bnf/\n",
     "\n",
     "#### What are CCG codes?\n",
-    "* CCG codes identify the clinical commissioning groups across England, which replaced primary care trusts following the NHS health and social care act in 2012. These groups are responsible for the commissioning of health services in the area which they govern. More information can be found at https://www.nhscc.org/ccgs/\n",
+    ">CCG codes identify the clinical commissioning groups across England, which replaced primary care trusts following the NHS health and social care act in 2012. These groups are responsible for the commissioning of health services in the area which they govern. More information can be found at https://www.nhscc.org/ccgs/\n",
     "\n",
     "#### Our project\n",
-    "* Our project provides an interactive tool where users can produce graphs containing trends of prescribing over time, for particular medical practices across England. Users will provide input of a drug and clinical commissioning group (optionally, a practice within the specified clinical commissioning group may be input). The output will be a .png image file displaying a graph showing the highest prescribing practice of the specified drug within the specified CCG (normalised to practice list size), the average prescribing rate of a specified drug within the CCG, the lowest prescribing practice within the CCG, and if the optional practice input is given, the prescribing rate of the specified practice."
+    ">Our project provides an interactive tool where users can produce graphs containing trends of prescribing over time, for particular medical practices across England. Users will provide input of a drug and clinical commissioning group (optionally, a practice within the specified clinical commissioning group may be input). The output will be a .png image file displaying a graph showing the highest prescribing practice of the specified drug within the specified CCG (normalised to practice list size), the average prescribing rate of a specified drug within the CCG, the lowest prescribing practice within the CCG, and if the optional practice input is given, the prescribing rate of the specified practice."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "### 1) Loading python dependencies.\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "### 2) Define the three custom functions devised for this project.\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "metadata": {},
    "source": [
     "### 3) Examine help associated with each function.\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -693,7 +693,7 @@
    "metadata": {},
    "source": [
     "### 4) Running the function without using an API call.\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -805,7 +805,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6) Running the function searching the API for the Manchester CCG and Antibacterial Drugs BNF using automatic partial matching of their names."
+    "### 6) Running the function searching the API for the Manchester CCG and Antibacterial Drugs BNF using automatic partial matching of their names.\n",
+    "***"
    ]
   },
   {
@@ -842,7 +843,7 @@
    "metadata": {},
    "source": [
     "### 7) Adding the values pertaining to a specific centre to a plot. \n",
-    "---"
+    "***"
    ]
   },
   {
@@ -901,7 +902,7 @@
    "metadata": {},
    "source": [
     "### 8) Searching for a centre that does not exist within selected CCG.\n",
-    "---"
+    "***"
    ]
   },
   {
@@ -945,7 +946,7 @@
    "metadata": {},
    "source": [
     "### 9) Other examples of the function (different CCG, different BNF, etc.)\n",
-    "---"
+    "***"
    ]
   },
   {
