Updated markdown formatting

--- a/Submission.ipynb
+++ b/Submission.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Programming Coursework\n",
-    "***"
+    "# Programming Coursework"
    ]
   },
   {
@@ -36,8 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1) Loading python dependencies.\n",
-    "***"
+    "## 1) Loading python dependencies."
    ]
   },
   {
@@ -60,8 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2) Define the three custom functions devised for this project.\n",
-    "***"
+    "## 2) Define the three custom functions devised for this project."
    ]
   },
   {
@@ -484,8 +481,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3) Examine help associated with each function.\n",
-    "***"
+    "## 3) Examine help associated with each function."
    ]
   },
   {
@@ -692,8 +688,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4) Running the function without using an API call.\n",
-    "***"
+    "## 4) Running the function without using an API call."
    ]
   },
   {
@@ -805,8 +800,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6) Running the function searching the API for the Manchester CCG and Antibacterial Drugs BNF using automatic partial matching of their names.\n",
-    "***"
+    "## 6) Running the function searching the API for the Manchester CCG and Antibacterial Drugs BNF using automatic partial matching of their names."
    ]
   },
   {
@@ -842,8 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7) Adding the values pertaining to a specific centre to a plot. \n",
-    "***"
+    "## 7) Adding the values pertaining to a specific centre to a plot. "
    ]
   },
   {
@@ -901,8 +894,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8) Searching for a centre that does not exist within selected CCG.\n",
-    "***"
+    "## 8) Searching for a centre that does not exist within selected CCG."
    ]
   },
   {
@@ -945,8 +937,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9) Other examples of the function (different CCG, different BNF, etc.)\n",
-    "***"
+    "## 9) Other examples of the function (different CCG, different BNF, etc.)"
    ]
   },
   {
